--- a/public/style.css
+++ b/public/style.css
@@ -15,19 +15,40 @@ h1 {
   border: 1px solid #ccc;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
   background-color: #fff;
-  width: 200px;
+  width: 255px;
+  border-radius: 10%;
+  box-shadow: rgba(0, 123, 255, 0.4) 5px 5px, rgba(0, 123, 255, 0.3) 10px 10px,
+    rgba(0, 123, 255, 0.2) 15px 15px, rgba(0, 123, 255, 0.1) 20px 20px,
+    rgba(0, 123, 255, 0.05) 25px 25px;
+}
+
+p {
+  width: 245px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: justify;
 }
 #form input[type="text"],
 #form input[type="number"] {
   display: block;
-  width: 80%;
+  width: 86%;
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 5px;
   border: 1px solid #ccc;
 }
+
+input:focus {
+  outline-color: #007bff;
+  color: #007bff;
+}
+
+input::placeholder {
+  color: #007bff;
+}
+
 #form input[type="submit"],
-#reset {
+#reset,
+#show {
   padding: 10px;
   border-radius: 5px;
   border: none;
